--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "brutalism": "^1.9.3",
     "core-js": "^3.6.5",
+    "ratatat": "^1.0.3",
+    "starlette": "^1.0.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
